<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_category_preferences" >
        <PreferenceScreen android:title="@string/pref_category_files" >
            <EditTextPreference
                android:defaultValue="/sdcard/mod"
                android:key="media_path"
                android:persistent="true"
                android:summary="@string/pref_media_path_summary"
                android:title="@string/pref_media_path_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="examples"
                android:persistent="true"
                android:summary="@string/pref_examples_summary"
                android:title="@string/pref_examples_title" />

            <ListPreference
                android:defaultValue="1"
                android:entries="@array/playlist_mode_array"
                android:entryValues="@array/playlist_mode_values"
                android:key="playlist_mode"
                android:persistent="true"
                android:summary="@string/pref_playlist_mode_summary"
                android:title="@string/pref_playlist_mode_title" />

            <CheckBoxPreference
                android:defaultValue="false"
                android:key="use_filename"
                android:persistent="true"
                android:summary="@string/pref_use_filename_summary"
                android:title="@string/pref_use_filename_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="back_button_navigation"
                android:persistent="true"
                android:summary="@string/pref_back_button_navigation_summary"
                android:title="@string/pref_back_button_navigation_title" />

            <Preference
                android:key="clear_cache"
                android:summary="@string/pref_clear_cache_summary"
                android:title="@string/pref_clear_cache_title" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="sound_screen"
            android:title="@string/pref_category_sound" >
            <ListPreference
                android:defaultValue="44100"
                android:entries="@array/sampling_rate_array"
                android:entryValues="@array/sampling_rate_values"
                android:key="sampling_rate"
                android:persistent="true"
                android:summary="@string/pref_sampling_rate_summary"
                android:title="@string/pref_sampling_rate_title" />

            <org.helllabs.android.xmp.preferences.SeekBarPreference
                android:defaultValue="400"
                android:dialogMessage="@string/pref_buffer_ms_dialog"
                android:key="buffer_ms_opensl"
                android:max="1000"
                android:persistent="true"
                android:summary="@string/pref_buffer_ms_summary"
                android:text="ms"
                android:title="@string/pref_buffer_ms_title" />

            <ListPreference
                android:defaultValue="1"
                android:entries="@array/vol_boost_array"
                android:entryValues="@array/vol_boost_values"
                android:key="vol_boost"
                android:persistent="true"
                android:summary="@string/pref_vol_boost_summary"
                android:title="@string/pref_vol_boost_title" />

            <CheckBoxPreference
                android:defaultValue="true"
                android:key="interpolate"
                android:persistent="true"
                android:summary="@string/pref_interpolate_summary"
                android:title="@string/pref_interpolate_title" />

            <ListPreference
                android:defaultValue="1"
                android:dependency="interpolate"
                android:entries="@array/interp_type_array"
                android:entryValues="@array/interp_type_values"
                android:key="interp_type"
                android:persistent="true"
                android:summary="@string/pref_interp_type_summary"
                android:title="@string/pref_interp_type_title" />

            <org.helllabs.android.xmp.preferences.SeekBarPreference
                android:defaultValue="70"
                android:dialogMessage="@string/preferences_pan_separation_dialog"
                android:key="pan_separation"
                android:max="100"
                android:persistent="true"
                android:summary="@string/pref_pan_separation_summary"
                android:text="%"
                android:title="@string/pref_pan_separation_title" />
            <org.helllabs.android.xmp.preferences.SeekBarPreference
                android:defaultValue="50"
                android:dialogMessage="@string/preferences_default_pan_dialog"
                android:key="default_pan"
                android:max="100"
                android:persistent="true"
                android:summary="@string/pref_default_pan_summary"
                android:text="%"
                android:title="@string/pref_default_pan_title" />

            <PreferenceCategory android:title="@string/pref_category_player_control" >
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="headset_pause"
                    android:persistent="true"
                    android:summary="@string/pref_headset_pause_summary"
                    android:title="@string/pref_headset_pause_title" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="bluetooth_pause"
                    android:persistent="true"
                    android:summary="@string/pref_bluetooth_pause_summary"
                    android:title="@string/pref_bluetooth_pause_title" />
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="all_sequences"
                    android:persistent="true"
                    android:summary="@string/pref_all_sequences_summary"
                    android:title="@string/pref_all_sequences_title" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/pref_category_interface" >
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="show_info_line"
                android:persistent="true"
                android:summary="@string/pref_show_info_line_summary"
                android:title="@string/pref_show_info_line_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="show_toast"
                android:persistent="true"
                android:summary="@string/pref_show_toast_summary"
                android:title="@string/pref_show_toast_title" />
            <CheckBoxPreference
                android:defaultValue="false"
                android:key="keep_screen_on"
                android:persistent="true"
                android:summary="@string/pref_keep_screen_on_summary"
                android:title="@string/pref_keep_screen_on_title" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="start_on_player"
                android:persistent="true"
                android:summary="@string/pref_start_on_player_summary"
                android:title="@string/pref_start_on_player_title" />

            <PreferenceCategory android:title="@string/pref_category_experimental" >
                <CheckBoxPreference
                    android:defaultValue="false"
                    android:key="enable_delete"
                    android:persistent="true"
                    android:summary="@string/pref_enable_delete_summary"
                    android:title="@string/pref_enable_delete_title" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/pref_category_modarchive" >
            <PreferenceCategory android:title="@string/pref_category_download" >
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="modarchive_folder"
                    android:persistent="true"
                    android:summary="@string/pref_modarchive_folder_summary"
                    android:title="@string/pref_modarchive_folder_title" />
                <CheckBoxPreference
                    android:defaultValue="true"
                    android:key="artist_folder"
                    android:persistent="true"
                    android:summary="@string/pref_artist_folder_summary"
                    android:title="@string/pref_artist_folder_title" />
            </PreferenceCategory>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_information" >
        <Preference
            android:summary="@string/pref_list_formats_summary"
            android:title="@string/pref_list_formats_title" >
            <intent android:action="org.helllabs.android.xmp.LIST_FORMATS" />
        </Preference>
        <Preference
            android:summary="@string/pref_about_summary"
            android:title="@string/pref_about_title" >
            <intent android:action="org.helllabs.android.xmp.ABOUT" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>