<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:xmp="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/menu_new_playlist"
        android:icon="@drawable/ic_action_new"
        xmp:showAsAction="never"
        android:title="@string/menu_new_playlist"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        xmp:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_file_download_white_24dp"
        xmp:showAsAction="ifRoom"
        android:title="@string/menu_download"/>
    <item
        android:id="@+id/menu_prefs"
        android:icon="@drawable/ic_settings_white_24dp"
        xmp:showAsAction="ifRoom"
        android:title="@string/menu_prefs"/>

</menu>