<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_weight="1.0"
              android:gravity="top"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/status_area"
        style="@style/StatusTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/current_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="12dp"
            android:layout_weight="1.0"
            android:focusable="true"
            android:longClickable="true"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_parent_dir"
            android:onClick="upButtonClick"
            android:src="@drawable/parent_selector"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">

        <LinearLayout
            android:id="@+id/modlist_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:orientation="vertical">

            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/swipeContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/modlist_listview"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </android.support.v4.widget.SwipeRefreshLayout>

            <TextView
                android:id="@id/android:empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top"
                android:text="@string/msg_no_modules"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/modlist_spinner"
            style="?android:progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/play_all"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.34"
            android:contentDescription="@string/button_play_all"/>

        <ImageButton
            android:id="@+id/toggle_loop"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:contentDescription="@string/button_toggle_loop"/>

        <ImageButton
            android:id="@+id/toggle_shuffle"
            style="@style/ButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.33"
            android:contentDescription="@string/button_toggle_shuffle"/>
    </LinearLayout>

</LinearLayout>